Fixed bug with name wrapping

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2718,7 +2718,7 @@ input[type="button"]:disabled,
 	color: rgba(255, 255, 255, 0.5);
 	height: 100%;
 	left: 0;
-	padding: 8em 4em;
+	padding: 8em 2em;
 	position: fixed;
 	text-align: right;
 	top: 0;
@@ -2763,6 +2763,7 @@ input[type="button"]:disabled,
 	font-size: 1.35em;
 	line-height: 0em;
 	margin: 0;
+	white-space: nowrap;
 }
 
 #header .image.avatar {
@@ -3111,7 +3112,7 @@ body.is-touch .poptrox-popup .closer {
 
 	#header {
 		max-width: 384px;
-		padding: 8em 4em;
+		padding: 8em 2em;
 	}
 
 	#main {
@@ -3143,12 +3144,12 @@ body.is-touch .poptrox-popup .closer {
 	/* Header */
 
 	#header {
-		padding: 8em 4em;
+		padding: 8em 2em;
 		width: 30%;
 	}
 
 	#header h1 {
-		font-size: 1.25em;
+		font-size: 1.35em;
 	}
 
 	#header h1 br {
@@ -3182,7 +3183,7 @@ body.is-touch .poptrox-popup .closer {
 
 /* Medium */
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 980px) {
 
 	/* Basic */
 
@@ -3217,7 +3218,7 @@ body.is-touch .poptrox-popup .closer {
 	}
 
 	#header h1 {
-		font-size: 1.75em;
+		font-size: 1.35em;
 	}
 
 	#header h1 br {
